# halo-access-system

./: .clang-format  .clangd  AGENTS.md  CMakeLists.txt  LICENSE  README.md
doc/: report.md  user_guide.md
docs/: BRD.md  CHANGELOG.md  brief.md
docs/plans/: master-plan.md  phase-01-foundation.md  phase-02-indexing.md  phase-03-query-midterm.md  phase-04-scale-up.md  phase-05-anomaly.md  phase-06-submit.md
src/: main.cpp
src/data/: halo_dataset_1k.csv  halo_dataset_2k.csv  test.csv  test_invalid.csv
src/include/anomaly/: AdvancedDetector.h  AnomalyConfig.h  AnomalyEngine.h  AnomalyRecord.h  BehaviorDetector.h  SessionDetector.h  ThresholdDetector.h
src/include/cli/: Printer.h
src/include/indexing/: HashIndex.h  HashTable.h  IndexManager.h  SortedIndex.h
src/include/models/: EventType.h  Location.h  LogRecord.h
src/include/query/: QueryEngine.h  ResourceJourneyQuery.h  TopResourceQuery.h  UserJourneyQuery.h
src/include/session/: SessionBuilder.h
src/include/storage/: CsvLoader.h  DataStore.h  Deduplicator.h  Validator.h
src/include/utils/: StringUtils.h  TimeUtils.h
src/source/anomaly/: AdvancedDetector.cpp  AnomalyEngine.cpp  AnomalyRecord.cpp  BehaviorDetector.cpp  SessionDetector.cpp  ThresholdDetector.cpp
src/source/cli/: Printer.cpp
src/source/indexing/: HashIndex.cpp  HashTable.cpp  IndexManager.cpp  SortedIndex.cpp
src/source/models/: EventType.cpp  Location.cpp  LogRecord.cpp
src/source/query/: QueryEngine.cpp  ResourceJourneyQuery.cpp  TopResourceQuery.cpp  UserJourneyQuery.cpp
src/source/session/: SessionBuilder.cpp
(+6 files in other folders)
